--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
                     <li><a href="word-of-the-day.html">Word of the Day</a></li>
-
                 </ul>
             </nav>
         </aside>
@@ -28,7 +27,7 @@
                 <h2 class="welcome-text">Welcome to The New State of Duolingo</h2>
                 <p class="explore-text">Explore life under the rule of the great El Duolingo.</p>
                 <div class="carousel">
-                    <div class="carousel-wrapper">
+                    <div class="carousel-inner">
                         <div class="carousel-item">
                             <img src="images/image1.jpg" class="carousel-image" alt="Image 1">
                         </div>
@@ -38,22 +37,12 @@
                         <div class="carousel-item">
                             <img src="images/image3.jpg" class="carousel-image" alt="Image 3">
                         </div>
-                        <!-- Repeat items for infinite scroll effect -->
-                        <div class="carousel-item">
-                            <img src="images/image1.jpg" class="carousel-image" alt="Image 1">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/image2.jpg" class="carousel-image" alt="Image 2">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/image3.jpg" class="carousel-image" alt="Image 3">
-                        </div>
+                        <!-- Cloned items will be added here by JavaScript -->
                     </div>
                 </div>
             </div>
         </main>
     </div>
-    <!-- Footer Section -->
     <footer>
         <p>Connect with us: <a href="https://example.com">Social Media Link</a></p>
     </footer>
