--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-	<meta http-equiv="Pragma" content="no-cache">
-	<meta http-equiv="Expires" content="0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>The New State of Duolingo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -43,13 +43,13 @@
                         <!-- Cloned items will be added here by JavaScript -->
                     </div>
                 </div>
+                <div id="commandment-text">Loading...</div>
             </div>
         </main>
     </div>
     <footer>
         <p>Connect with us: <a href="https://example.com">Social Media Link</a></p>
     </footer>
-
     <script src="scripts.js"></script>
 </body>
 </html>
