--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
                     <li><a href="word-of-the-day.html">Word of the Day</a></li>
+                    <li><a href="comments.html">Comments</a></li> <!-- Added link to Comments page -->
                 </ul>
             </nav>
         </aside>
