--- a/comments.html
+++ b/comments.html
@@ -6,12 +6,12 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>About El Duolingo - TNSOD</title>
+    <title>Comments - TNSOD</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>The New State of Duolingo</h1>
+        <h1>The New State of Duolingo - Comments</h1>
         <button class="menu-toggle" aria-label="Toggle menu">&#9776;</button>
     </header>
     <div class="container">
@@ -22,18 +22,29 @@
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
                     <li><a href="word-of-the-day.html">Word of the Day</a></li>
-                    <li><a href="comments.html">Comments</a></li> <!-- Added link to Comments page -->
+                    <li><a href="comments.html">Comments</a></li>
                 </ul>
             </nav>
         </aside>
-        <main class="main-content about-el-duolingo page-content left-align">
-            <h2>About El Duolingo</h2>
-            <p>Content about El Duolingo goes here.</p>
+        <main class="main-content comments-page">
+            <h2>Leave a Comment</h2>
+            <form id="comment-form">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="comment">Comment:</label>
+                <textarea id="comment" name="comment" rows="4" required></textarea>
+                <button type="submit">Submit</button>
+            </form>
+            <section id="comments-section">
+                <h2>Comments</h2>
+                <!-- Comments will be displayed here -->
+            </section>
         </main>
     </div>
     <footer>
         <p>Connect with us: <a href="#">Social Media Link</a></p>
     </footer>
     <script src="scripts.js"></script>
+    <script src="comments.js"></script> <!-- Include the new JS file here -->
 </body>
 </html>
