--- a/comments.html
+++ b/comments.html
@@ -8,10 +8,18 @@
     <meta http-equiv="Expires" content="0">
     <title>Comments - TNSOD</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Custom styles for embedding GitHub issues */
+        #comments-section {
+            width: 100%;
+            height: 600px; /* Adjust height as needed */
+            overflow-y: auto;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>The New State of Duolingo - Comments</h1>
+        <h1>The New State of Duolingo</h1>
         <button class="menu-toggle" aria-label="Toggle menu">&#9776;</button>
     </header>
     <div class="container">
@@ -22,29 +30,20 @@
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
                     <li><a href="word-of-the-day.html">Word of the Day</a></li>
-                    <li><a href="comments.html">Comments</a></li>
+                    <li><a href="comments.html">Comments</a></li> <!-- Link to Comments page -->
                 </ul>
             </nav>
         </aside>
-        <main class="main-content comments-page">
-            <h2>Leave a Comment</h2>
-            <form id="comment-form">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="comment">Comment:</label>
-                <textarea id="comment" name="comment" rows="4" required></textarea>
-                <button type="submit">Submit</button>
-            </form>
-            <section id="comments-section">
-                <h2>Comments</h2>
-                <!-- Comments will be displayed here -->
-            </section>
+        <main class="main-content comments-page page-content left-align">
+            <h2>Comments</h2>
+            <div id="comments-section">
+                <iframe src="https://github.com/johnsampler/tnsod/issues/1" frameborder="0" style="width:100%; height:100%;"></iframe>
+            </div>
         </main>
     </div>
     <footer>
         <p>Connect with us: <a href="#">Social Media Link</a></p>
     </footer>
     <script src="scripts.js"></script>
-    <script src="comments.js"></script> <!-- Include the new JS file here -->
 </body>
 </html>
