--- a/about-el-duolingo.html
+++ b/about-el-duolingo.html
@@ -8,6 +8,16 @@
     <meta http-equiv="Expires" content="0">
     <title>About El Duolingo - TNSOD</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .bio img {
+            float: right;
+            margin-left: 15px;
+            margin-bottom: 15px;
+            width: 250px; /* Adjust size as needed */
+            height: auto;
+            box-shadow: 2px 2px 8px rgba(0,0,0,0.3); /* Optional: add some shadow for better visibility */
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -38,6 +48,7 @@
                 <h4>Ascension to Power</h4>
                 <p>The rise of El Duolingo is a tale of exceptional strategy and decisive action. As the once-vibrant state of Mirakoia descended into chaos and corruption, El Duolingo capitalized on the widespread discontent. They mobilized a coalition of loyalists and orchestrated a series of calculated maneuvers that dismantled the crumbling government. With an iron fist and a strategic mind, El Duolingo declared the establishment of The New State of Duolingo, consolidating power and centralizing authority.</p>
                 <h4>Leadership and Governance</h4>
+                <img src="images/image4.jpg" alt="El Duolingo's Leadership" />
                 <p>In The New State of Duolingo, El Duolingo’s leadership is characterized by a strong, centralized authority. Their governance style is marked by the following key elements:</p>
                 <ul>
                     <li><strong>Authoritarian Rule:</strong> El Duolingo maintains strict control over all aspects of government. Decisions are made unilaterally, with minimal input from the public or other officials. This approach ensures swift and decisive action, reflecting El Duolingo’s vision for the state.</li>
