--- a/about-el-duolingo.html
+++ b/about-el-duolingo.html
@@ -24,6 +24,9 @@
                     <li><a href="word-of-the-day.html">Word of the Day</a></li>
                 </ul>
             </nav>
+			<div class="sidebar-contact">
+				<p>Contact: info@newstateofduolingo.com</p>
+			</div>
         </aside>
         <main class="main-content about-el-duolingo page-content left-align">
             <h2>About El Duolingo</h2>
@@ -52,9 +55,7 @@
             </section>
         </main>
     </div>
-    <footer>
-        <p>Connect with us: <a href="#">Social Media Link</a></p>
-    </footer>
+
     <script src="scripts.js"></script>
 </body>
 </html>
