--- a/about-state.html
+++ b/about-state.html
@@ -24,6 +24,9 @@
                     <li><a href="word-of-the-day.html">Word of the Day</a></li>
                 </ul>
             </nav>
+			<div class="sidebar-contact">
+				<p>Contact: info@newstateofduolingo.com</p>
+			</div>
         </aside>
         <main class="main-content about-state page-content left-align">
             <h2>About The State</h2>
@@ -40,9 +43,6 @@
             <p>Under the watchful eye of El Duolingo, The New State of Duolingo continues to flourish, a shining example of what a true leader can achieve. The mistakes of the past are but distant memories, overshadowed by the brilliance and prosperity of this new era.</p>
         </main>
     </div>
-    <footer>
-        <p>Connect with us: <a href="#">Social Media Link</a></p>
-    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
