--- a/word-of-the-day.html
+++ b/word-of-the-day.html
@@ -24,15 +24,15 @@
                     <li><a href="word-of-the-day.html">Word of the Day</a></li>
                 </ul>
             </nav>
+			<div class="sidebar-contact">
+				<p>Contact: info@newstateofduolingo.com</p>
+			</div>
         </aside>
         <main class="main-content word-of-the-day page-content left-align">
             <h2>Word of the Day</h2>
             <p>Content about the word of the day goes here.</p>
         </main>
     </div>
-    <footer>
-        <p>Connect with us: <a href="#">Social Media Link</a></p>
-    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
