--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
                     <li><a href="word-of-the-day.html">Word of the Day</a></li>
                 </ul>
             </nav>
-			<div class="sidebar-contact">
-				<p>Contact: info@newstateofduolingo.com</p>
-			</div>
         </aside>
         <main class="main-content">
             <div class="text-center">
@@ -50,6 +47,9 @@
             </div>
         </main>
     </div>
+    <footer>
+        <p>Connect with us: <a href="https://example.com">Social Media Link</a></p>
+    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
