--- a/word-of-the-day.html
+++ b/word-of-the-day.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
+	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+	<meta http-equiv="Pragma" content="no-cache">
+	<meta http-equiv="Expires" content="0">
     <title>Word of the Day - TNSOD</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -22,17 +22,18 @@
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
                     <li><a href="word-of-the-day.html">Word of the Day</a></li>
+
                 </ul>
             </nav>
-			<div class="sidebar-contact">
-				<p>Contact: info@newstateofduolingo.com</p>
-			</div>
         </aside>
         <main class="main-content word-of-the-day page-content left-align">
             <h2>Word of the Day</h2>
             <p>Content about the word of the day goes here.</p>
         </main>
     </div>
+    <footer>
+        <p>Connect with us: <a href="#">Social Media Link</a></p>
+    </footer>
     <script src="scripts.js"></script>
 </body>
 </html>
