--- a/about-el-duolingo.html
+++ b/about-el-duolingo.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-	<meta http-equiv="Pragma" content="no-cache">
-	<meta http-equiv="Expires" content="0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>About El Duolingo - TNSOD</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .bio img {
+            float: right;
+            margin-left: 15px;
+            margin-bottom: 15px;
+            width: 250px; /* Adjust size as needed */
+            height: auto;
+            box-shadow: 2px 2px 8px rgba(0,0,0,0.3); /* Optional: add some shadow for better visibility */
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -22,13 +32,35 @@
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
                     <li><a href="word-of-the-day.html">Word of the Day</a></li>
-
                 </ul>
             </nav>
         </aside>
         <main class="main-content about-el-duolingo page-content left-align">
             <h2>About El Duolingo</h2>
-            <p>Content about El Duolingo goes here.</p>
+            <section class="bio">
+                <h3>Biography of El Duolingo</h3>
+                <p><strong>Name:</strong> El Duolingo</p>
+                <p><strong>Title:</strong> Supreme Leader of The New State of Duolingo</p>
+                <p><strong>Born:</strong> Unknown (Rumored to be from a mysterious, distant land)</p>
+                <p><strong>Known For:</strong> Unyielding Authority, Transformative Vision, Consolidation of Power</p>
+                <h4>Early Life and Background</h4>
+                <p>El Duolingo's origins are enshrouded in secrecy, with rumors suggesting a background steeped in rigorous training and strategic mastery. According to legend, El Duolingo emerged from an enigmatic and remote region, where they were groomed to become a master tactician and visionary leader. Their early life remains largely undocumented, adding to the mystique surrounding their ascent.</p>
+                <h4>Ascension to Power</h4>
+                <p>The rise of El Duolingo is a tale of exceptional strategy and decisive action. As the once-vibrant state of Mirakoia descended into chaos and corruption, El Duolingo capitalized on the widespread discontent. They mobilized a coalition of loyalists and orchestrated a series of calculated maneuvers that dismantled the crumbling government. With an iron fist and a strategic mind, El Duolingo declared the establishment of The New State of Duolingo, consolidating power and centralizing authority.</p>
+                <h4>Leadership and Governance</h4>
+                <img src="images/image4.jpg" alt="El Duolingo's Leadership" />
+                <p>In The New State of Duolingo, El Duolingo’s leadership is characterized by a strong, centralized authority. Their governance style is marked by the following key elements:</p>
+                <ul>
+                    <li><strong>Authoritarian Rule:</strong> El Duolingo maintains strict control over all aspects of government. Decisions are made unilaterally, with minimal input from the public or other officials. This approach ensures swift and decisive action, reflecting El Duolingo’s vision for the state.</li>
+                    <li><strong>Economic Strategy:</strong> The economy has been reshaped according to El Duolingo’s directives. Focused investments in key sectors have spurred growth, but economic policies are closely monitored and directed by the central authority to ensure alignment with state goals.</li>
+                    <li><strong>Social Order:</strong> El Duolingo emphasizes stability and unity through stringent laws and regulations. The state’s policies are designed to suppress dissent and maintain order, ensuring that the population remains focused on the leader’s vision.</li>
+                    <li><strong>Cultural Reformation:</strong> The regime has promoted a strong sense of national identity and pride. Public messaging and propaganda glorify El Duolingo’s leadership, fostering a culture of loyalty and admiration among the citizens.</li>
+                </ul>
+                <h4>Legacy and Vision</h4>
+                <p>El Duolingo’s legacy is defined by their ability to impose order and execute their vision for The New State of Duolingo. Their leadership has transformed the state into a model of centralized authority, where every facet of society is aligned with their objectives. The Supreme Leader’s vision includes further consolidation of power and the perpetuation of their regime’s ideals.</p>
+                <h4>Personal Philosophy</h4>
+                <p>El Duolingo’s personal philosophy revolves around the belief that true leadership requires unwavering control and vision. They prioritize the stability and strength of the state over individual freedoms, believing that their authoritarian approach is necessary for the greater good. Their leadership is driven by a commitment to maintaining order and achieving their strategic goals.</p>
+            </section>
         </main>
     </div>
     <footer>
