--- a/about-state.html
+++ b/about-state.html
@@ -26,8 +26,18 @@
             </nav>
         </aside>
         <main class="main-content about-state page-content left-align">
-            <h2>About the State</h2>
-            <p>Content about the state goes here.</p>
+            <h2>About The State</h2>
+            <p>Before the dawn of <strong>The New State of Duolingo</strong>, there was <strong>Mirakoia</strong>, a so-called democratic republic that was plagued by inefficiency and corruption. Under the façade of democracy, Mirakoia was marred by a dysfunctional government, rampant with scandal and mismanagement. The leaders of Mirakoia were more interested in personal gain and maintaining their power than in genuinely serving the people. Their governance was riddled with failed policies, endless bureaucratic red tape, and a lack of vision.</p>
+
+            <p>The turning point came when a series of inexplicable disasters struck Mirakoia. What the corrupt leaders claimed were random accidents and unfortunate coincidences were, in fact, signs of the deep-seated rot within their regime. These disasters, which they failed to address or control, only served to highlight the government's incompetence and disregard for the well-being of its citizens.</p>
+
+            <p>Enter <strong>El Duolingo</strong>—a visionary who emerged from the chaos, bringing with them a promise of a new era. Recognizing the dire need for change, El Duolingo stepped in as a beacon of hope and progress. With unparalleled wisdom and a commitment to true leadership, El Duolingo took decisive action to replace the crumbling system of Mirakoia with a revolutionary new structure.</p>
+
+            <p><strong>The New State of Duolingo</strong> was born from this transformation, ushering in an era of unparalleled stability and prosperity. Under El Duolingo's guidance, the nation has experienced remarkable advancements in every aspect of life. The chaos of the old regime has been replaced by a harmonious society where every citizen enjoys the benefits of a well-ordered and efficient government. El Duolingo's leadership has brought about innovative reforms, ensuring that every aspect of daily life is streamlined and optimized for the greater good.</p>
+
+            <p>Gone are the days of mismanagement and corruption. The New State of Duolingo stands as a model of effective governance, where every policy and decision is made with the welfare of the people in mind. El Duolingo's vision has transformed the nation into a thriving community where progress and unity are paramount.</p>
+
+            <p>Under the watchful eye of El Duolingo, The New State of Duolingo continues to flourish, a shining example of what a true leader can achieve. The mistakes of the past are but distant memories, overshadowed by the brilliance and prosperity of this new era.</p>
         </main>
     </div>
     <footer>
