--- a/about-state.html
+++ b/about-state.html
@@ -41,8 +41,9 @@
         </main>
     </div>
     <footer>
-        <p>Connect with us: <a href="#">Social Media Link</a></p>
+        <p>Connect with us: <a href="contact.html">Send us a message</a></p>
     </footer>
+
     <script src="scripts.js"></script>
 </body>
 </html>
