--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-	<meta http-equiv="Pragma" content="no-cache">
-	<meta http-equiv="Expires" content="0">
-    <title>Word of the Day - TNSOD</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <title>Observations and Questions - TNSOD</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,19 +22,21 @@
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
                     <li><a href="word-of-the-day.html">Word of the Day</a></li>
-
                 </ul>
             </nav>
         </aside>
-        <main class="main-content word-of-the-day page-content left-align">
-            <h2>Word of the Day</h2>
-            <p>Content about the word of the day goes here.</p>
+        <main class="main-content contact-page">
+            <section id="feedback">
+                <h2>Observations and Questions</h2>
+                <div class="form-container">
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf2d-uBJCpwtAR2prqEqjFC2lXrluiSBPyakOmDrd36fUV6NQ/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                </div>
+            </section>
         </main>
     </div>
     <footer>
         <p>Connect with us: <a href="contact.html">Send us a message</a></p>
     </footer>
-
     <script src="scripts.js"></script>
 </body>
 </html>
