--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
         </main>
     </div>
     <footer>
-        <p>Connect with us: <a href="https://example.com">Social Media Link</a></p>
+        <p>Connect with us: <a href="contact.html">Send us a message</a></p>
     </footer>
+
     <script src="scripts.js"></script>
 </body>
 </html>
