Vocabulary page update

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <meta http-equiv="Expires" content="0">
     <title>Observations and Questions - TNSOD</title>
     <link rel="stylesheet" href="styles.css">
+	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -21,7 +22,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
-                    <li><a href="word-of-the-day.html">Word of the Day</a></li>
+                    <li><a href="expand-vocabulary.html">Expand your vocabulary</a></li>
                 </ul>
             </nav>
         </aside>
