--- a/expand-vocabulary.html
+++ b/expand-vocabulary.html
@@ -8,6 +8,7 @@
 	<meta http-equiv="Expires" content="0">
     <title>Word of the Day - TNSOD</title>
     <link rel="stylesheet" href="styles.css">
+	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -21,14 +22,14 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
-                    <li><a href="word-of-the-day.html">Word of the Day</a></li>
+                    <li><a href="expand-vocabulary.html">Expand your vocabulary</a></li>
 
                 </ul>
             </nav>
         </aside>
         <main class="main-content word-of-the-day page-content left-align">
-            <h2>Word of the Day</h2>
-            <p>Content about the word of the day goes here.</p>
+            <h2>WIP...</h2>
+            <p>Content will be here.</p>
         </main>
     </div>
     <footer>
