Vocabulary page update

--- a/about-el-duolingo.html
+++ b/about-el-duolingo.html
@@ -32,7 +32,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
-                    <li><a href="expand-vocabulary.html">Expand your vocabulary</a></li>
+                    <li><a href="improve-vocabulary.html">Improve your vocabulary</a></li>
                 </ul>
             </nav>
         </aside>
