Vocabulary page update

--- a/improve-vocabulary.html
+++ b/improve-vocabulary.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta http-equiv="Expires" content="0">
-    <title>Word of the Day - TNSOD</title>
+    <title>Improve your vocabulary - TNSOD</title>
     <link rel="stylesheet" href="styles.css">
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
