--- a/improve-vocabulary.html
+++ b/improve-vocabulary.html
@@ -3,12 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-	<meta http-equiv="Pragma" content="no-cache">
-	<meta http-equiv="Expires" content="0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Improve your vocabulary - TNSOD</title>
     <link rel="stylesheet" href="styles.css">
-	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <style>
+        /* Add specific styles for the game */
+        .game-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+            margin: 20px 0;
+        }
+
+        .word {
+            background-color: #333;
+            color: #e0e0e0;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.3s;
+            font-size: 1.2em;
+        }
+
+        .word.selected {
+            background-color: #4caf50; /* Green for selected words */
+        }
+
+        .word.correct {
+            background-color: #4caf50; /* Green for matched words */
+            transform: scale(0.5); /* Shrink effect */
+        }
+
+        .word.incorrect {
+            background-color: #f44336; /* Red for incorrect words */
+            transform: scale(1.2); /* Slightly enlarge for feedback */
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -23,13 +57,24 @@
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
                     <li><a href="improve-vocabulary.html">Improve your vocabulary</a></li>
-
                 </ul>
             </nav>
         </aside>
         <main class="main-content word-of-the-day page-content left-align">
-            <h2>WIP...</h2>
-            <p>Content will be here.</p>
+            <h2>Word Matching Game</h2>
+            <div class="game-container">
+                <!-- English words -->
+                <div class="word" data-lang="en" data-pair="1">House</div>
+                <div class="word" data-lang="en" data-pair="2">Car</div>
+                <div class="word" data-lang="en" data-pair="3">Book</div>
+                <div class="word" data-lang="en" data-pair="4">School</div>
+
+                <!-- Spanish words -->
+                <div class="word" data-lang="es" data-pair="1">Casa</div>
+                <div class="word" data-lang="es" data-pair="2">Coche</div>
+                <div class="word" data-lang="es" data-pair="3">Libro</div>
+                <div class="word" data-lang="es" data-pair="4">Escuela</div>
+            </div>
         </main>
     </div>
     <footer>
@@ -37,5 +82,6 @@
     </footer>
 
     <script src="scripts.js"></script>
+    <script src="game.js"></script> <!-- Include the new game script -->
 </body>
 </html>
