Vocabulary page update

--- a/improve-vocabulary.html
+++ b/improve-vocabulary.html
@@ -61,19 +61,8 @@
             </nav>
         </aside>
         <main class="main-content word-of-the-day page-content left-align">
-            <h2>Word Matching Game</h2>
             <div class="game-container">
-                <!-- English words -->
-                <div class="word" data-lang="en" data-pair="1">House</div>
-                <div class="word" data-lang="en" data-pair="2">Car</div>
-                <div class="word" data-lang="en" data-pair="3">Book</div>
-                <div class="word" data-lang="en" data-pair="4">School</div>
-
-                <!-- Spanish words -->
-                <div class="word" data-lang="es" data-pair="1">Casa</div>
-                <div class="word" data-lang="es" data-pair="2">Coche</div>
-                <div class="word" data-lang="es" data-pair="3">Libro</div>
-                <div class="word" data-lang="es" data-pair="4">Escuela</div>
+                <!-- Word elements will be dynamically inserted here by JavaScript -->
             </div>
         </main>
     </div>
