Vocabulary page update

--- a/improve-vocabulary-es.html
+++ b/improve-vocabulary-es.html
@@ -46,6 +46,9 @@
             background-color: #f44336; /* Red for incorrect words */
             transform: scale(1.2); /* Slightly enlarge for feedback */
         }
+		.titl-cent {
+			text-align: center;
+		}
     </style>
 </head>
 <body>
@@ -60,11 +63,12 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
-                    <li><a href="improve-vocabulary.html">Improve your vocabulary</a></li>
+                    <li><a href="select-language.html">Improve your vocabulary</a></li>
                 </ul>
             </nav>
         </aside>
         <main class="main-content word-of-the-day page-content left-align">
+			<h1 class="titl-cent"> Match the words </h1>
             <div class="game-container">
                 <!-- Word elements will be dynamically inserted here by JavaScript -->
             </div>
