Vocabulary page update

--- a/select-language.html
+++ b/select-language.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-	<meta http-equiv="Pragma" content="no-cache">
-	<meta http-equiv="Expires" content="0">
-    <title>Language selection - TNSOD</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <title>Language Selection - TNSOD</title>
     <link rel="stylesheet" href="styles.css">
-	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -26,14 +26,34 @@
                 </ul>
             </nav>
         </aside>
-        <main class="main-content about-state page-content left-align select-lang">
-			<h1>Select your assigned language</h1>
-			<p class="langs"><img class="flag-image" src="images/flag1.png"></img> <a href="improve-vocabulary-es.html"> Spanish</a></p>
-			<p class="langs"><img class="flag-image" src="images/flag2.png"></img> German</p>
-			<p class="langs"><img class="flag-image" src="images/flag3.png"></img> French</p>
-			<p class="langs"><img class="flag-image" src="images/flag4.png"></img> Italian</p>
-			<p class="langs"><img class="flag-image" src="images/flag5.png"></img> Portuguese</p>
-			<p class="langs"><img class="flag-image" src="images/flag6.png"></img> Finnish</p>
+        <main class="language-selection">
+            <h2>Select your assigned language</h2>
+            <div class="language-grid">
+                <a href="improve-vocabulary-es.html" class="language-card">
+                    <img src="images/flag1.png" alt="Spanish flag" class="flag-image">
+                    <span>Spanish</span>
+                </a>
+                <a href="improve-vocabulary-de.html" class="language-card">
+                    <img src="images/flag2.png" alt="German flag" class="flag-image">
+                    <span>German</span>
+                </a>
+                <a href="improve-vocabulary-fr.html" class="language-card">
+                    <img src="images/flag3.png" alt="French flag" class="flag-image">
+                    <span>French</span>
+                </a>
+                <a href="improve-vocabulary-it.html" class="language-card">
+                    <img src="images/flag4.png" alt="Italian flag" class="flag-image">
+                    <span>Italian</span>
+                </a>
+                <a href="improve-vocabulary-pt.html" class="language-card">
+                    <img src="images/flag5.png" alt="Portuguese flag" class="flag-image">
+                    <span>Portuguese</span>
+                </a>
+                <a href="improve-vocabulary-fi.html" class="language-card">
+                    <img src="images/flag6.png" alt="Finnish flag" class="flag-image">
+                    <span>Finnish</span>
+                </a>
+            </div>
         </main>
     </div>
     <footer>
