Vocabulary page update

--- a/select-language.html
+++ b/select-language.html
@@ -29,27 +29,27 @@
         <main class="language-selection">
             <h2>Select your assigned language</h2>
             <div class="language-grid">
-                <a href="improve-vocabulary-es.html" class="language-card">
+                <a href="improve-vocabulary-es.html" class="language-card language-option" data-language="es">
                     <img src="images/flag1.png" alt="Spanish flag" class="flag-image">
                     <span>Spanish</span>
                 </a>
-                <a href="improve-vocabulary-de.html" class="language-card">
+                <a href="improve-vocabulary-de.html" class="language-card language-option" data-language="de">
                     <img src="images/flag2.png" alt="German flag" class="flag-image">
                     <span>German</span>
                 </a>
-                <a href="improve-vocabulary-fr.html" class="language-card">
+                <a href="improve-vocabulary-fr.html" class="language-card language-option" data-language="fr">
                     <img src="images/flag3.png" alt="French flag" class="flag-image">
                     <span>French</span>
                 </a>
-                <a href="improve-vocabulary-it.html" class="language-card">
+                <a href="improve-vocabulary-it.html" class="language-card language-option" data-language="it">
                     <img src="images/flag4.png" alt="Italian flag" class="flag-image">
                     <span>Italian</span>
                 </a>
-                <a href="improve-vocabulary-pt.html" class="language-card">
+                <a href="improve-vocabulary-pt.html" class="language-card language-option" data-language="pt">
                     <img src="images/flag5.png" alt="Portuguese flag" class="flag-image">
                     <span>Portuguese</span>
                 </a>
-                <a href="improve-vocabulary-fi.html" class="language-card">
+                <a href="improve-vocabulary-fi.html" class="language-card language-option" data-language="fi">
                     <img src="images/flag6.png" alt="Finnish flag" class="flag-image">
                     <span>Finnish</span>
                 </a>
