Vocabulary page update

--- a/improve-vocabulary-fi.html
+++ b/improve-vocabulary-fi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-language="fi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +51,7 @@
 		}
     </style>
 </head>
-<body>
+<body data-language="fi">
     <header>
         <h1>The New State of Duolingo</h1>
         <button class="menu-toggle" aria-label="Toggle menu">&#9776;</button>
