Vocabulary page update

--- a/improve-vocabulary-fr.html
+++ b/improve-vocabulary-fr.html
@@ -51,7 +51,7 @@
 		}
     </style>
 </head>
-<body data-language="es">
+<body data-language="fr">
     <header>
         <h1>The New State of Duolingo</h1>
         <button class="menu-toggle" aria-label="Toggle menu">&#9776;</button>
