--- a/about-state.html
+++ b/about-state.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-	<meta http-equiv="Pragma" content="no-cache">
-	<meta http-equiv="Expires" content="0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>About State - TNSOD</title>
     <link rel="stylesheet" href="styles.css">
-	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -22,23 +22,25 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
-                    <li><a href="select-language.html">Improve your vocabulary</a></li>
+                    <li><a href="select-language.html">Enhance Your Vocabulary</a></li>
                 </ul>
             </nav>
         </aside>
         <main class="main-content about-state page-content left-align">
             <h2>About The State</h2>
-            <p>Before the dawn of <strong>The New State of Duolingo</strong>, there was <strong>Mirakoia</strong>, a so-called democratic republic that was plagued by inefficiency and corruption. Under the façade of democracy, Mirakoia was marred by a dysfunctional government, rampant with scandal and mismanagement. The leaders of Mirakoia were more interested in personal gain and maintaining their power than in genuinely serving the people. Their governance was riddled with failed policies, endless bureaucratic red tape, and a lack of vision.</p>
+            <p>Before the rise of <strong>The New State of Duolingo</strong>, the so-called democratic republic of <strong>Mirakoia</strong> was a festering pit of inefficiency and corruption. Cloaked in the guise of democracy, Mirakoia's government was a cesspool of scandal, mismanagement, and betrayal. Its leaders, driven by greed and a hunger for power, neglected their duty to the people. Their reign was characterized by failed policies, endless bureaucratic entanglements, and a catastrophic lack of vision.</p>
 
-            <p>The turning point came when a series of inexplicable disasters struck Mirakoia. What the corrupt leaders claimed were random accidents and unfortunate coincidences were, in fact, signs of the deep-seated rot within their regime. These disasters, which they failed to address or control, only served to highlight the government's incompetence and disregard for the well-being of its citizens.</p>
+            <p>The regime's downfall began with a series of disastrous events, which the corrupt officials dismissed as mere accidents. In reality, these calamities were glaring indicators of the systemic rot within their rule. Their failure to manage or mitigate these crises exposed their utter incompetence and their utter disregard for the well-being of the populace.</p>
 
-            <p>Enter <strong>El Duolingo</strong>—a visionary who emerged from the chaos, bringing with them a promise of a new era. Recognizing the dire need for change, El Duolingo stepped in as a beacon of hope and progress. With unparalleled wisdom and a commitment to true leadership, El Duolingo took decisive action to replace the crumbling system of Mirakoia with a revolutionary new structure.</p>
+            <p>Enter <strong>El Duolingo</strong>—a visionary and unyielding leader who emerged from the chaos to establish order. Recognizing the critical need for radical change, El Duolingo seized the opportunity to dismantle the rotting structure of Mirakoia and replace it with a new, ironclad regime. With unmatched strategic acumen and a steely resolve, El Duolingo forged <strong>The New State of Duolingo</strong>, a beacon of strength and stability.</p>
 
-            <p><strong>The New State of Duolingo</strong> was born from this transformation, ushering in an era of unparalleled stability and prosperity. Under El Duolingo's guidance, the nation has experienced remarkable advancements in every aspect of life. The chaos of the old regime has been replaced by a harmonious society where every citizen enjoys the benefits of a well-ordered and efficient government. El Duolingo's leadership has brought about innovative reforms, ensuring that every aspect of daily life is streamlined and optimized for the greater good.</p>
+            <p>Under the iron rule of El Duolingo, the nation has experienced unparalleled advancements and military precision in every facet of life. The chaos of the old regime has been eradicated, replaced by a disciplined and cohesive society where every citizen benefits from a streamlined and efficient government. El Duolingo's leadership has implemented sweeping reforms, optimizing every aspect of daily life for the collective strength and efficiency of the state.</p>
 
-            <p>Gone are the days of mismanagement and corruption. The New State of Duolingo stands as a model of effective governance, where every policy and decision is made with the welfare of the people in mind. El Duolingo's vision has transformed the nation into a thriving community where progress and unity are paramount.</p>
+            <p>A cornerstone of this new era is the rigorous emphasis on language learning. Understanding that communication is the bedrock of national strength, El Duolingo has mandated that language proficiency become a cornerstone of state ideology. This strategic focus on linguistic excellence ensures that every citizen can contribute to the state’s unified purpose and engage in global affairs with precision and clarity.</p>
 
-            <p>Under the watchful eye of El Duolingo, The New State of Duolingo continues to flourish, a shining example of what a true leader can achieve. The mistakes of the past are but distant memories, overshadowed by the brilliance and prosperity of this new era.</p>
+            <p>The New State of Duolingo stands as a paragon of effective governance, where every policy is crafted with the unwavering intent to fortify the state and its people. The promotion of language learning is not merely an educational initiative but a vital component of our strategic dominance. It enhances our ability to project power, unify our people, and secure our place on the global stage.</p>
+
+            <p>Under El Duolingo's vigilant leadership, The New State of Duolingo thrives as a model of disciplined progress and unity. The failures of the past are relegated to the annals of history, eclipsed by the brilliance and might of this new era. The state’s unwavering commitment to language mastery strengthens our resolve and amplifies our influence, ensuring that we remain a beacon of order and supremacy.</p>
         </main>
     </div>
     <footer>
