--- a/about-state.html
+++ b/about-state.html
@@ -22,7 +22,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about-state.html">About State</a></li>
                     <li><a href="about-el-duolingo.html">About El Duolingo</a></li>
-                    <li><a href="select-language.html">Enhance Your Vocabulary</a></li>
+                    <li><a href="select-language.html">Improve Your Vocabulary</a></li>
                 </ul>
             </nav>
         </aside>
